kubernetes-manifests/phpmyadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - image: phpmyadmin/phpmyadmin
        #imagePullPolicy: Always
        name: phpmyadmin
        #command: [ "/bin/sh", "-c", "ls /var/www/config/nginx" ]
        ports:
        - containerPort: 80
          name: phpmyadmin
