kubernetes-manifests/phpmyadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  ports:
  - port: 80
  selector:
    app: phpmyadmin
  # type: NodePort
